fixed overlay display on mobile

--- a/style.css
+++ b/style.css
@@ -409,6 +409,11 @@ footer.container_wrap.socket_color{
 	display:none;
 	top:60px;
 }
+@media only screen and (max-width: 767px){
+	.overlay-menu{
+		top: 80px !important;
+	}
+}
 
 #base-full-menu ul.menu{
 	text-align: center;
